unpackaged/main/default/objects/Activity/fields/HiddenActivityType__c.field-meta.xml
<CustomField>
    <fullName>HiddenActivityType__c</fullName>
    <label>Тип(скрытый)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>