unpackaged/main/default/objects/Activity/fields/RealOwner__c.field-meta.xml
<CustomField>
    <fullName>RealOwner__c</fullName>
    <label>Фактический исполнитель</label>
    <length>255</length>
    <type>Text</type>
</CustomField>