unpackaged/main/default/objects/Activity/fields/TionOwner__c.field-meta.xml
<CustomField>
    <fullName>TionOwner__c</fullName>
    <label>Сотрудник, ответственный за действие</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Алексей Мирошин</fullName>
            </value>
            <value>
                <fullName>Андрей Дюдюев</fullName>
            </value>
            <value>
                <fullName>Андрей Капкин</fullName>
            </value>
            <value>
                <fullName>Антон Чариков</fullName>
            </value>
            <value>
                <fullName>Вадим Семенихин</fullName>
            </value>
            <value>
                <fullName>Виктория Пяк</fullName>
            </value>
            <value>
                <fullName>Владимир Алексеев</fullName>
            </value>
            <value>
                <fullName>Владимир Шматков</fullName>
            </value>
            <value>
                <fullName>Денис Вакал</fullName>
            </value>
            <value>
                <fullName>Дмитрий Пронкин</fullName>
            </value>
            <value>
                <fullName>Евгений Гребенюк</fullName>
            </value>
            <value>
                <fullName>Евгений Сафронов</fullName>
            </value>
            <value>
                <fullName>Екатерина Горшенина</fullName>
            </value>
            <value>
                <fullName>Екатерина Широкова</fullName>
            </value>
            <value>
                <fullName>Иван Кущенко</fullName>
            </value>
            <value>
                <fullName>Кирилл Бабич</fullName>
            </value>
            <value>
                <fullName>Константин Парахин</fullName>
            </value>
            <value>
                <fullName>Михаил Данилов</fullName>
            </value>
            <value>
                <fullName>Наталия Литвин</fullName>
            </value>
            <value>
                <fullName>Наталья Натфуллина</fullName>
            </value>
            <value>
                <fullName>Николай Бурячковский</fullName>
            </value>
            <value>
                <fullName>Павел Гордеев</fullName>
            </value>
            <value>
                <fullName>Павел Погожев</fullName>
            </value>
            <value>
                <fullName>Роман Борисов</fullName>
            </value>
            <value>
                <fullName>Сергей Димитриев</fullName>
            </value>
            <value>
                <fullName>Сергей Куйдин</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>